# src/api/model/index.ts
@@ -177,6 +177,10 @@ export * from './outHoldAmountResponseAllOf';
 export * from './outHoldAmountResponseAllOfData';
 export * from './paginationResponse';
 export * from './paginationResponseDataItem';
+export * from './personalHomeBody';
+export * from './personalHomeResponse';
+export * from './personalHomeResponseAllOf';
+export * from './personalHomeResponseAllOfData';
 export * from './pledgeCommitBody';
 export * from './pledgeListItem';
 export * from './pledgeRecord';
@@ -217,6 +221,7 @@ export * from './userInfoBody';
 export * from './userInfoResponse';
 export * from './userInfoResponseAllOf';
 export * from './userInfoResponseAllOfData';
+export * from './userRadar';
 export * from './userSecurityCheckIdentityBody';
 export * from './userSecurityUpdatePhoneBody';
 export * from './withdrawSubmitBody';
